--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "BSD-2-Clause",
   "dependencies": {
     "app-module-path": "^1.0.4",
+    "babel-preset-react": "^6.24.1",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
     "classnames": "^2.2.0",
